--- a/p1.ipynb
+++ b/p1.ipynb
@@ -24,23 +24,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "id": "a279a0b2-53a2-423c-8c45-4b33abab9fc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>POS_0_9_CP</th>\n",
+       "      <th>POS_10_19_CP</th>\n",
+       "      <th>POS_20_29_CP</th>\n",
+       "      <th>POS_30_39_CP</th>\n",
+       "      <th>POS_40_49_CP</th>\n",
+       "      <th>POS_50_59_CP</th>\n",
+       "      <th>POS_60_69_CP</th>\n",
+       "      <th>POS_70_79_CP</th>\n",
+       "      <th>POS_80_89_CP</th>\n",
+       "      <th>POS_90_CP</th>\n",
+       "      <th>DTH_CUM_CP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24</td>\n",
+       "      <td>51</td>\n",
+       "      <td>44</td>\n",
+       "      <td>51</td>\n",
+       "      <td>60</td>\n",
+       "      <td>75</td>\n",
+       "      <td>72</td>\n",
+       "      <td>61</td>\n",
+       "      <td>27</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22</td>\n",
+       "      <td>31</td>\n",
+       "      <td>214</td>\n",
+       "      <td>177</td>\n",
+       "      <td>62</td>\n",
+       "      <td>46</td>\n",
+       "      <td>24</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>84</td>\n",
+       "      <td>126</td>\n",
+       "      <td>239</td>\n",
+       "      <td>194</td>\n",
+       "      <td>159</td>\n",
+       "      <td>171</td>\n",
+       "      <td>125</td>\n",
+       "      <td>74</td>\n",
+       "      <td>24</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>65</td>\n",
+       "      <td>76</td>\n",
+       "      <td>80</td>\n",
+       "      <td>110</td>\n",
+       "      <td>82</td>\n",
+       "      <td>81</td>\n",
+       "      <td>55</td>\n",
+       "      <td>49</td>\n",
+       "      <td>56</td>\n",
+       "      <td>34</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>99</td>\n",
+       "      <td>107</td>\n",
+       "      <td>339</td>\n",
+       "      <td>287</td>\n",
+       "      <td>139</td>\n",
+       "      <td>147</td>\n",
+       "      <td>110</td>\n",
+       "      <td>71</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1039</th>\n",
+       "      <td>86</td>\n",
+       "      <td>201</td>\n",
+       "      <td>206</td>\n",
+       "      <td>202</td>\n",
+       "      <td>240</td>\n",
+       "      <td>317</td>\n",
+       "      <td>225</td>\n",
+       "      <td>138</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1040</th>\n",
+       "      <td>80</td>\n",
+       "      <td>102</td>\n",
+       "      <td>125</td>\n",
+       "      <td>124</td>\n",
+       "      <td>104</td>\n",
+       "      <td>71</td>\n",
+       "      <td>70</td>\n",
+       "      <td>36</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041</th>\n",
+       "      <td>268</td>\n",
+       "      <td>358</td>\n",
+       "      <td>277</td>\n",
+       "      <td>415</td>\n",
+       "      <td>355</td>\n",
+       "      <td>332</td>\n",
+       "      <td>215</td>\n",
+       "      <td>107</td>\n",
+       "      <td>47</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1042</th>\n",
+       "      <td>81</td>\n",
+       "      <td>116</td>\n",
+       "      <td>90</td>\n",
+       "      <td>145</td>\n",
+       "      <td>118</td>\n",
+       "      <td>113</td>\n",
+       "      <td>70</td>\n",
+       "      <td>36</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043</th>\n",
+       "      <td>118</td>\n",
+       "      <td>156</td>\n",
+       "      <td>197</td>\n",
+       "      <td>215</td>\n",
+       "      <td>114</td>\n",
+       "      <td>114</td>\n",
+       "      <td>83</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1044 rows × 11 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[ 24,  51,  44, ...,  27,   0,   3],\n",
-       "       [ 22,  31, 214, ...,   0,   0,   2],\n",
-       "       [ 84, 126, 239, ...,  24,   8,   9],\n",
-       "       ...,\n",
-       "       [268, 358, 277, ...,  47,   7,   5],\n",
-       "       [ 81, 116,  90, ...,   9,   0,   2],\n",
-       "       [118, 156, 197, ...,   0,   0,   5]])"
+       "      POS_0_9_CP  POS_10_19_CP  POS_20_29_CP  POS_30_39_CP  POS_40_49_CP  \\\n",
+       "0             24            51            44            51            60   \n",
+       "1             22            31           214           177            62   \n",
+       "2             84           126           239           194           159   \n",
+       "3             65            76            80           110            82   \n",
+       "4             99           107           339           287           139   \n",
+       "...          ...           ...           ...           ...           ...   \n",
+       "1039          86           201           206           202           240   \n",
+       "1040          80           102           125           124           104   \n",
+       "1041         268           358           277           415           355   \n",
+       "1042          81           116            90           145           118   \n",
+       "1043         118           156           197           215           114   \n",
+       "\n",
+       "      POS_50_59_CP  POS_60_69_CP  POS_70_79_CP  POS_80_89_CP  POS_90_CP  \\\n",
+       "0               75            72            61            27          0   \n",
+       "1               46            24             9             0          0   \n",
+       "2              171           125            74            24          8   \n",
+       "3               81            55            49            56         34   \n",
+       "4              147           110            71            37          0   \n",
+       "...            ...           ...           ...           ...        ...   \n",
+       "1039           317           225           138            48          0   \n",
+       "1040            71            70            36             6          0   \n",
+       "1041           332           215           107            47          7   \n",
+       "1042           113            70            36             9          0   \n",
+       "1043           114            83            19             0          0   \n",
+       "\n",
+       "      DTH_CUM_CP  \n",
+       "0              3  \n",
+       "1              2  \n",
+       "2              9  \n",
+       "3              7  \n",
+       "4             12  \n",
+       "...          ...  \n",
+       "1039           7  \n",
+       "1040           6  \n",
+       "1041           5  \n",
+       "1042           2  \n",
+       "1043           5  \n",
+       "\n",
+       "[1044 rows x 11 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +273,7 @@
    "source": [
     "train_df = pd.read_csv(\"train.csv\")\n",
     "test_df = pd.read_csv(\"test.csv\")\n",
-    "train_df.values"
+    "train_df"
    ]
   },
   {
@@ -112,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "id": "b53e715c-ae93-4e2c-b72d-bcab0e1ba2da",
    "metadata": {},
    "outputs": [
@@ -131,7 +356,7 @@
        "        [0.0300]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,8 +379,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "66e69909-7edd-40cc-ba39-525e93b739f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(testX[:1,:]@coef).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "56e4eca6-195f-46a0-9df0-ced005c45f9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "e38a36d7-fe84-4d89-802d-a70627da0b84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Part2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "1f9e1414-9a87-475a-bd9a-f02e3da5474f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictedY = (testX[:,:]@coef)\n",
+    "predictedY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "7ce50ff1-e3d3-4476-b9ce-90b6f01295c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def r2_score(trueY, predictedY):\n",
+    "    SStot = torch.sum(pow((testY-torch.mean(testY)),2))\n",
+    "    SSreg = torch.sum(pow((testY-predictedY),2))\n",
+    "    improvement = SStot - SSreg\n",
+    "    R2_score = improvement/SStot\n",
+    "    return R2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "2fc33df5-7c88-4098-88bf-31ec6318dc8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.4110, dtype=torch.float64)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r2_score(testY, predictedY))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38f32ab6-e78c-40b9-9635-6480b7a8d18c",
    "metadata": {},
    "outputs": [],
    "source": []
