Edited #Part2 to make it cleaner

--- a/p1.ipynb
+++ b/p1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 124,
    "id": "b2ac0c7c-4d23-4394-bad5-4230424df895",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 125,
    "id": "1cb500f9-fae9-4020-9e45-f63838f33f3d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 126,
    "id": "a279a0b2-53a2-423c-8c45-4b33abab9fc7",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
        "[1044 rows x 11 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 127,
    "id": "87a04d92-f393-4444-826a-576c4ad42e45",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "        [118., 156., 197.,  ...,  19.,   0.,   0.]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 128,
    "id": "5007af9c-3142-455c-b060-81137cad0bb1",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "        [5.]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 129,
    "id": "b53e715c-ae93-4e2c-b72d-bcab0e1ba2da",
    "metadata": {},
    "outputs": [
@@ -356,7 +356,7 @@
        "        [0.0300]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,17 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 130,
    "id": "66e69909-7edd-40cc-ba39-525e93b739f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "float"
+       "9.844"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 131,
    "id": "56e4eca6-195f-46a0-9df0-ced005c45f9d",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "False"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 132,
    "id": "e38a36d7-fe84-4d89-802d-a70627da0b84",
    "metadata": {},
    "outputs": [],
@@ -431,25 +431,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 144,
    "id": "1f9e1414-9a87-475a-bd9a-f02e3da5474f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictedY = (testX[:,:]@coef)\n",
-    "predictedY"
+    "predictedY = (testX[:,:]@coef)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 145,
    "id": "7ce50ff1-e3d3-4476-b9ce-90b6f01295c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def r2_score(trueY, predictedY):\n",
-    "    SStot = torch.sum(pow((testY-torch.mean(testY)),2))\n",
-    "    SSreg = torch.sum(pow((testY-predictedY),2))\n",
+    "    SStot = torch.sum((testY-torch.mean(testY))**2)\n",
+    "    SSreg = torch.sum((testY-predictedY)**2)\n",
     "    improvement = SStot - SSreg\n",
     "    R2_score = improvement/SStot\n",
     "    return R2_score"
@@ -457,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 146,
    "id": "2fc33df5-7c88-4098-88bf-31ec6318dc8b",
    "metadata": {},
    "outputs": [
@@ -475,8 +474,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "38f32ab6-e78c-40b9-9635-6480b7a8d18c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Part3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "35b980f4-ac7e-47e0-abf0-8990bcacbee8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(19.)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.tensor(0.0)\n",
+    "y = x**2 - 8*x + 19\n",
+    "y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b68c98e-f875-4c00-852b-132289292fd4",
    "metadata": {},
    "outputs": [],
    "source": []
